--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,12 @@
     <string name="app_name">Preferences</string>
     <string name="title_activity_settings">SettingsActivity</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="pref_entry_one">entry one</string>
+    <string name="pref_entry_two">entry two</string>
+    <string name="pref_entry_three">entry three</string>
+
+    <string name="pref_entry_value_one">entry value one</string>
+    <string name="pref_entry_value_two">entry value two</string>
+    <string name="pref_entry_value_three">entry value three</string>
+
 </resources>
